--- a/source/Novicell.Examine.ElasticSearch.Tests/packages.config
+++ b/source/Novicell.Examine.ElasticSearch.Tests/packages.config
@@ -7,14 +7,41 @@
   <package id="K4os.Compression.LZ4.Legacy" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
+  <package id="LightInject" version="5.5.0" targetFramework="net472" />
+  <package id="LightInject.Annotation" version="1.1.0" targetFramework="net472" />
+  <package id="LightInject.Web" version="2.0.0" targetFramework="net472" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
+  <package id="MiniProfiler" version="4.1.0" targetFramework="net472" />
+  <package id="MiniProfiler.Shared" version="4.1.0" targetFramework="net472" />
   <package id="NEST" version="7.5.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NPoco" version="3.9.4" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Semver" version="2.0.6" targetFramework="net472" />
+  <package id="Serilog" version="2.9.1-dev-01154" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Process" version="2.0.1" targetFramework="net472" />
+  <package id="Serilog.Enrichers.Thread" version="3.2.0-dev-00747" targetFramework="net472" />
+  <package id="Serilog.Filters.Expressions" version="2.1.0" targetFramework="net472" />
+  <package id="Serilog.Formatting.Compact" version="1.1.0" targetFramework="net472" />
+  <package id="Serilog.Formatting.Compact.Reader" version="1.0.3" targetFramework="net472" />
+  <package id="Serilog.Settings.AppSettings" version="2.2.2" targetFramework="net472" />
+  <package id="Serilog.Sinks.Async" version="1.4.1-dev-00071" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Map" version="1.0.1-dev-00025" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
+  <package id="Superpower" version="2.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Umbraco.SqlServerCE" version="4.0.0.1" targetFramework="net472" />
+  <package id="UmbracoCms.Core" version="8.5.3" targetFramework="net472" />
 </packages>
